DemoApp/SMDataTypes.h

enum  TCMDType {cmtIOCPEvent, cmtAccept, cmtDisconnect, cmtTR_CODE};

enum  TR_CODE {ctDestAdd, ctDestDel, ctDestPushSend, ctDestRRSend, ctDestRRSendResponse, ctUserID, ctDisconnect, ctUserConnectOk, ctUsersAlready, ctClientUniqKey};

enum  TDeliveryMode {Delivery_RR, Delivery_RR_Response, Delivery_Push};



typedef long int (__stdcall *TInitialize)();


typedef long int (__stdcall *TSMClientConnect)(int index, char* host, long int port);


typedef long int (__stdcall *TSMClientDisconnect)(int index);


typedef bool (__stdcall *TSMClientIsConnected)(int index);


typedef long int (__stdcall *TSMSetMessageParameters)(int index, int messtype,
TDeliveryMode DeliveryMode, char* Destination, char* Msg);


typedef long int (__stdcall *TSMSetMessageBinaryField)(int index, int messtype,
char* FieldName, char* Data, int DataSize);


typedef long int (__stdcall *TSMSetMessageStringField)(int index, int messtype,
char* FieldName, char* Str);


typedef long int (__stdcall *TSMSetMessageIntegerField)(int index, int messtype,
char* FieldName, int Val);


typedef long int (__stdcall *TSMSendMessage)(int index, int messtype);


typedef char* (__stdcall *TSMGetClientUniqKey)(int index);


typedef char* (__stdcall *TSMGetClientIP)(int index);


typedef long int (__stdcall *TSMEventAddDestination)(int index, char* Dest, char* Msg);


typedef long int (__stdcall *TSMEventRemoveDestination)(int index, char* Dest, char* Msg);


typedef long int (__stdcall *TSMEventAllRemoveDestination)(int index);


typedef long int (__stdcall *TSMSetWorkEventCallBack)(int index, char* CallBackProc);


typedef char* (__stdcall *TSMMessageGetBinaryFieldValue)(int index, int messtype, char* FieldName);


typedef char* (__stdcall *TSMMessageGetStringFieldValue)(int index, int messtype, char* FieldName);


typedef int (__stdcall *TSMMessageGetIntegerFieldValue)(int index, int messtype, char* FieldName);


typedef long int (__stdcall *TSMGetObjectsNumber)();


typedef long int (__stdcall *TSMGetMaximumObjectsNumber)();


typedef long int (__stdcall *TSMCreateInstance)();


typedef int (__stdcall *TSMMessageGetDeliveryType)(int index, int messtype);


typedef int (__stdcall *TSMSendResponse)(int index, int messtype);